--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,11 @@
 :root {
     --pallete-black-bg: #090A05;
+    --pallete-pink: #f655a0;
+    --pallete-blue: #00ffff;
+
+    --pallete-dark-regular: #091016;
+    
+    
+    --indent-h: 20px;
 }
+
