--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,8 +4,14 @@
     --pallete-blue: #00ffff;
 
     --pallete-dark-regular: #091016;
-    
-    
+    --pallete-transparent-bg: rgba(0,0 ,0 ,.4);
+
     --indent-h: 20px;
+
+    // breakpoints
+    // --bp-small: 576px;
+    // --bp-medium: 768px;
+    // --bp-large: 992px;
+    // --bp-extra-large: 1200px;
 }
 
