--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,7 @@
 @import '_variables.scss';
 @import '_mixins.scss';
+@import '_media.scss';
+
 @import '_reset.scss';
 @import '_fonts.scss';
+@import '_animations.scss';
