--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,6 +2,7 @@
     --pallete-black-bg: #090A05;
     --pallete-pink: #f655a0;
     --pallete-blue: #00ffff;
+    --pallete-yellow: #FFFF70;
 
     --pallete-dark-regular: #091016;
     --pallete-transparent-bg: rgba(0,0 ,0 ,.4);
