--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -1,24 +1,3 @@
-// @keyframes swipe-right {
-//     0% {
-//         transform: translate3d(0, 0, 0);
-//         filter: drop-shadow(0 0 0px var(--pallete-pink));
-//     }
-//     50% {
-//         transform: translate3d(100%, 0, 0);
-//         filter: drop-shadow(0 0 0px var(--pallete-pink));
-//     }
-//     75% {
-//         transform: translate3d(-100%, 0, 0);
-//         opacity: 0;
-//         filter: drop-shadow(0 0 5px var(--pallete-pink));
-//     }
-//     100% {
-//         transform: translate3d(0, 0, 0);
-//         opacity: 1;
-//         filter: drop-shadow(0 0 5px var(--pallete-pink));
-//     }
-// }
-
 @keyframes swipe-right {
     0% {
         transform: translate3d(0, 0, 0);
@@ -33,5 +12,173 @@
     100% {
         transform: translate3d(0, 0, 0);
         opacity: 1;
+    }
+}
+
+
+// глитч эффект hover для ссылок
+@mixin glitchCopy { 
+    content: attr(data-text);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.hover-effect-glitch {
+    position: relative;
+    color: white;
+    // font-size: 4em;
+    letter-spacing: .1em;
+
+    /* Animation provies a slight random skew. Check bottom of doc
+    for more information on how to random skew. */
+    &:hover {
+        animation: glitch-skew 1s infinite linear alternate-reverse;
+    
+        // Creates a copy before our text. 
+        &::before{
+            // Duplicates our text with the mixin.
+            @include glitchCopy;
+            // Scoots text slightly to the left for the color offset.
+            left: 2px;
+            // Creates the color 'shadow' that happens on the glitch.
+            text-shadow: -2px 0 #ff00c1;
+            /* Creates an initial clip for our glitch. This works in
+            a typical top,right,bottom,left fashion and creates a mask
+            to only show a certain part of the glitch at a time. */
+            clip: rect(44px, 450px, 56px, 0);
+            /* Runs our glitch-anim defined below to run in a 5s loop, infinitely,
+            with an alternating animation to keep things fresh. */
+            animation: glitch-anim 5s infinite linear alternate-reverse;
+        }
+
+        // Creates a copy after our text. Note comments from ::before.
+        &::after {
+            @include glitchCopy;
+            left: -2px;
+            text-shadow: -2px 0 #00fff9, 2px 2px #ff00c1;
+            animation: glitch-anim2 1s infinite linear alternate-reverse;
+        }
+    }
+   
+}
+
+/* Creates an animation with 20 steaps. For each step, it calculates 
+a percentage for the specific step. It then generates a random clip
+box to be used for the random glitch effect. Also adds a very subtle
+skew to change the 'thickness' of the glitch.*/
+@keyframes glitch-anim {
+    $steps: 20;
+    @for $i from 0 through $steps {
+        #{percentage($i*(1/$steps))} {
+            clip: rect(random(100)+px, 9999px, random(100)+px, 0);
+            // transform: skew((random(100) / 100) + deg);
+        }
+    }
+}
+
+// Same deal, just duplicated for ultra randomness.
+@keyframes glitch-anim2 {
+    $steps: 20;
+    @for $i from 0 through $steps {
+        #{percentage($i*(1/$steps))} {
+            clip: rect(random(100)+px, 9999px, random(100)+px, 0);
+            transform: skew((random(100) / 100) + deg);
+        }
+    }
+}
+
+// Does the same deal as before, but now only skews. Used for main text.
+@keyframes glitch-skew {
+    $steps: 10;
+    @for $i from 0 through $steps {
+        #{percentage($i*(1/$steps))} {
+            transform: skew((random(10) - 5) + deg);
+        }
+    }
+    // 0% {
+
+    // }
+    // 10% {
+
+    // }
+    // 20% {
+
+    // }
+    // 30% {
+
+    // }
+    // 40% {
+
+    // }
+    // 50% {
+
+    // }
+    // 60% {
+
+    // }
+    // 70% {
+
+    // }
+    // 80% {
+
+    // }
+    // 90% {
+
+    // }
+    // 100% {
+
+    // }
+}
+
+
+// эффект мерцания для главной фоновой картинки
+
+.animation-flickering {
+    animation: flickering 5s linear infinite;
+    transition: 0s;
+    // background-color: rgba(39,39,39,.5);
+    background-color: rgba(9, 10, 5, .5);
+}
+
+@keyframes flickering {
+    // $steps: 10; 
+    // @for $i from 0 through $steps {
+    //     #{percentage($i*(1/$steps) / random(10))} {
+    //         background-color: rgba(39, 39, 39, random(5) * .1);
+    //     }
+    // }
+
+    0% {
+        background-color: rgba(9, 10, 5, .5);
+    }
+    10% {
+        background-color: rgba(9, 10, 5, .5);
+    }
+    20% {
+        background-color: rgba(9, 10, 5, .5);
+    }
+    21% {
+        background-color: rgba(9, 10, 5, .4);
+    }
+    22% {
+        background-color: rgba(9, 10, 5, .5);
+    }
+    86% {
+        background-color: rgba(9, 10, 5, .5);
+    }
+    88% {
+        background-color: rgba(9, 10, 5, .4);
+    }
+    90% {
+        background-color: rgba(9, 10, 5, .5);
+    }
+    92% {
+        background-color: rgba(9, 10, 5, .4);
+    }
+    96% {
+        background-color: rgba(9, 10, 5, .5);
     }
 }
