--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,14 +1,20 @@
 :root {
     --pallete-black-bg: #090A05;
+
     --pallete-pink: #f655a0;
+    --pallete-pink-dark: #FF0077;
+
     --pallete-blue: #00ffff;
+
     --pallete-yellow: #FFFF70;
+    --pallete-yellow-light: #FFFFA0;
 
     --pallete-dark-regular: #091016;
     --pallete-transparent-bg: rgba(0,0 ,0 ,.4);
 
     --indent-h: 20px;
 
+    --HeaderSectionHeight: 550px;
     // breakpoints
     // --bp-small: 576px;
     // --bp-medium: 768px;
