--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,6 +10,9 @@
     --pallete-yellow-light: #FFFFA0;
 
     --pallete-dark-regular: #091016;
+    --pallete-dark-light: #101B29;
+    --pallete-dark-semilight: #162537;
+    --pallete-dark-medium: #09121C;
     --pallete-transparent-bg: rgba(0,0 ,0 ,.4);
 
     --indent-h: 20px;
@@ -20,5 +23,8 @@
     // --bp-medium: 768px;
     // --bp-large: 992px;
     // --bp-extra-large: 1200px;
+
+    // text
+    --pallete-white: #fff;
 }
 
