--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,19 +1,19 @@
 :root {
-    --pallete-black-bg: #090A05;
+    --palette-black-bg: #090A05;
 
-    --pallete-pink: #f655a0;
-    --pallete-pink-dark: #FF0077;
+    --palette-pink: #f655a0;
+    --palette-pink-dark: #FF0077;
 
-    --pallete-blue: #00ffff;
+    --palette-blue: #00ffff;
 
-    --pallete-yellow: #FFFF70;
-    --pallete-yellow-light: #FFFFA0;
+    --palette-yellow: #FFFF70;
+    --palette-yellow-light: #FFFFA0;
 
-    --pallete-dark-regular: #091016;
-    --pallete-dark-light: #101B29;
-    --pallete-dark-semilight: #162537;
-    --pallete-dark-medium: #09121C;
-    --pallete-transparent-bg: rgba(0,0 ,0 ,.4);
+    --palette-dark-regular: #091016;
+    --palette-dark-light: #101B29;
+    --palette-dark-semilight: #162537;
+    --palette-dark-medium: #09121C;
+    --palette-transparent-bg: rgba(0,0 ,0 ,.4);
 
     --indent-h: 20px;
 
@@ -25,6 +25,6 @@
     // --bp-extra-large: 1200px;
 
     // text
-    --pallete-white: #fff;
+    --palette-white: #fff;
 }
 
