--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -188,7 +188,7 @@ skew to change the 'thickness' of the glitch.*/
 // Анимация при наведении на неоновые кнопки
 .btn-neon.hover-effect-neon_glitch {
     &:hover {
-        text-shadow: 0 0 1px var(--pallete-blue);
-        box-shadow: 0 0 1px var(--pallete-pink-dark), 0 0 15px var(--pallete-pink-dark) inset;
+        text-shadow: 0 0 1px var(--palette-blue);
+        box-shadow: 0 0 1px var(--palette-pink-dark), 0 0 15px var(--palette-pink-dark) inset;
     }
 }
