--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,6 +11,7 @@
 
     --palette-dark-regular: #091016;
     --palette-dark-light: #101B29;
+    --palette-dark-lighter: #162436;
     --palette-dark-semilight: #162537;
     --palette-dark-medium: #09121C;
     --palette-transparent-bg: rgba(0,0 ,0 ,.4);
