--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -212,6 +212,7 @@
     text-transform: uppercase;
     display: flex;
     // justify-content: center;
+    align-items: center;
     h2 {
         display: inline-block;
         vertical-align: middle;
