--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -9,6 +9,9 @@ $extra-large: 1200px;
     @if $media == handlers {
         @media only screen and (max-width: $small) { @content; } 
     }
+    @else if $media == tablets-screens {
+        @media only screen and (min-width: 0) and (max-width: $medium) { @content; }
+    } 
     @else if $media == medium-screens {
         @media only screen and (min-width: 0) and (max-width: $large) { @content; }
     }   
