--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -16,6 +16,8 @@
     --palette-dark-medium: #09121C;
     --palette-transparent-bg: rgba(0,0 ,0 ,.4);
 
+    --palette-dark-purple: #190E35;
+
     --indent-h: 20px;
 
     --HeaderSectionHeight: 550px;
