--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,6 +9,8 @@
     --palette-yellow: #FFFF70;
     --palette-yellow-light: #FFFFA0;
 
+    --palette-green: #52DE37;
+
     --palette-dark-regular: #091016;
     --palette-dark-light: #101B29;
     --palette-dark-lighter: #162436;
