--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -25,4 +25,7 @@ $extra-large: 1200px;
     @else if $media == large-screens {
         @media only screen and (max-width: $extra-large - .2) { @content; }
     }
+    @else if $media == extra-large-screens {
+        @media only screen and (min-width: $extra-large) { @content; }
+    }
 }
