--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -17,12 +17,14 @@
     --palette-dark-semilight: #162537;
     --palette-dark-medium: #09121C;
     --palette-transparent-bg: rgba(0,0 ,0 ,.4);
+    --palette-light-icon: #667788;
 
     --palette-dark-purple: #190E35;
 
     --indent-h: 20px;
 
     --HeaderSectionHeight: 550px;
+    --HeaderSectionHeightSmall: 300px;
     // breakpoints
     // --bp-small: 576px;
     // --bp-medium: 768px;
