--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -179,3 +179,23 @@ skew to change the 'thickness' of the glitch.*/
     }
 }
 
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+
+@keyframes wizard {
+    from {
+        transform: translateX(100%);
+    }
+    to {
+        transform: translateX(0%);
+    }
+}
