--- a/src/components/RenderlessWizard/transitions.css
+++ b/src/components/RenderlessWizard/transitions.css
@@ -2,6 +2,7 @@
 .fade-leave-active {
   transition: opacity 0.5s ease;
   position: absolute;
+  /* position: relative; */
   top: 0;
   right: 0;
   bottom: 0;
@@ -18,6 +19,7 @@
 .translate-fade-leave-active {
   transition: all 300ms;
   position: absolute;
+  /* position: relative; */
   top: 0;
   right: 0;
   bottom: 0;
@@ -40,10 +42,15 @@
 .translate-fade-backwarding-enter-active {
   transition: all 300ms;
   position: absolute;
+  /* position: relative; */
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
+}
+
+.translate-fade-backwarding-enter-active {
+  position: relative;
 }
 
 .translate-fade-backwarding-enter {
@@ -60,6 +67,7 @@
 }
 .translate-fade-enter-to {
   transform: translateX(0%);
+  position: relative;
 }
 .translate-fade-backwarding-leave-to {
   transform: translateX(100%);
