--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -20,11 +20,14 @@
     --palette-light-icon: #667788;
 
     --palette-dark-purple: #190E35;
+    --palette-purple: #4E00FF;
 
     --indent-h: 20px;
 
     --HeaderSectionHeight: 550px;
     --HeaderSectionHeightSmall: 300px;
+    --HeaderSectionHeightHome: 80vh;
+
     // breakpoints
     // --bp-small: 576px;
     // --bp-medium: 768px;
